tests/neg/cc-poly-2.check
-- [E007] Type Mismatch Error: tests/neg/cc-poly-2.scala:13:15 ---------------------------------------------------------
13 |    f[Nothing](d) // error
   |               ^
   |               Found:    (d : Test.D^)
   |               Required: Test.D
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/cc-poly-2.scala:14:19 ---------------------------------------------------------
14 |    f[CapSet^{c1}](d) // error
   |                   ^
   |                   Found:    (d : Test.D^)
   |                   Required: Test.D^{c1}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/cc-poly-2.scala:16:20 ---------------------------------------------------------
16 |    val _: D^{c1} = x // error
   |                    ^
   |                    Found:    (x : Test.D^{d})
   |                    Required: Test.D^{c1}
   |
   | longer explanation available when compiling with `-explain`
